corrige nome imagem

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -82,7 +82,7 @@
           <!-- Botão 1 -->
           <div class="col-md col-6 mb-3">
             <button class="button-6" role="button" style="color: #6B5C3E">
-              <img src="./_img/vector.png" alt="" id="figurinhasBotao">
+              <img src="./_img/Vector.png" alt="" id="figurinhasBotao">
               Reeducação <br> alimentar
             </button>
           </div>
