--- a/app/public/_css/style.css
+++ b/app/public/_css/style.css
@@ -182,7 +182,7 @@
 
 @font-face {
   font-family: PrimeiraFonte;
-  src: url("./_font/Bastine/Bastine.ttf")
+  src: url("./_font/Bastine.ttf")
 }
 
 .PrimeiraFonte {
