--- a/app/public/_css/style.css
+++ b/app/public/_css/style.css
@@ -180,9 +180,18 @@
   }
 }
 
-@font-face {
+/* @font-face {
   font-family: PrimeiraFonte;
   src: url("./_font/Bastine.ttf")
+} */
+
+@font-face {
+  font-family: PrimeiraFonte;
+  src: url('bastine-webfont.woff2') format('woff2'),
+       url('bastine-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
 }
 
 .PrimeiraFonte {
