--- a/app/public/_css/style.css
+++ b/app/public/_css/style.css
@@ -330,8 +330,8 @@ html, body {
 }
 
 .alinhamentoCarrossel {
-  padding-right: 10%;
-  padding-left: 20%;
+  padding-right: 0%;
+  padding-left: 10%;
 }
 @media (max-width: 840px) {
   .alinhamentoCarrossel {
@@ -347,8 +347,14 @@ html, body {
   #anilhas {
     display: none;
   }
+  .imgCarrossel {
+    max-height: 300px;
+  }
 }
 
+.imgCarrossel {
+  text-align: center;
+}
 
 #prato1 {
   max-width:400px;
