--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -61,7 +61,7 @@
             <div class="mt-5 col-md-12 pb-5 alinhamentoBasico">
               <h1 class="mt-5 PrimeiraFonte fonteGigante" id="tituloConstrua1" style="color: #590219"> Construa <span style="color:#DABE85;">a sua</span><br>
                 melhor versão<br></h1>
-              <h1 class="mt-5 PrimeiraFonte fonteGigante" id="tituloConstrua" style="color: #590219">Construa <span style="color:#DABE85;"> a sua</span> melhor versão<br></h1>
+              <h1 class="PrimeiraFonte fonteGigante" id="tituloConstrua" style="color: #590219">Construa <span style="color:#DABE85;"> a sua</span> melhor versão<br></h1>
               <p class="pb-5 fonteTexto" style="color: #590219"><br>Acompanhamento nutricional personalizado para alcançar seus objetivos. Com suporte personalizado, realizar seus sonhos é mais fácil do que nunca.</p>
               <div class="pb-5 dynamic-padding">
                 <a id="whatsapp-link" href="https://wa.me/<%= whatsappNumber %>">
@@ -73,9 +73,9 @@
         </div>
       </section>
       <section class="col-md-6 text-center order-1 order-md-2" style="display: flex; align-items: center; justify-content: center; padding-right: 10%;">
-        <div class="image-container pt-5">
+        <div class="image-container pt-3">
           <button class="blur-button" style="bottom: 20%; left: -20%;"></button>
-          <img src="./_img/nataliacampos (1).png" alt="foto" style="width: 100%; max-width:550px; height: auto;">
+          <img src="./_img/nataliacampos (1).png" id="fotoNatalia" alt="foto">
           <button class="blur-button" style="top: 35%; right: -5%;"></button>
         </div>
       </section>
@@ -421,7 +421,7 @@
       
       
       <div class="mt-5 text-center pt-5" style="font-size: 24px; color: #590219; font-weight: 200; ">
-        <p class="pt-2" id="prato" >Confira nossas outras opções de planos através do WhatsApp</p>
+        <p class="pt-2">Confira nossas outras opções de planos através do WhatsApp</p>
         <img src="./_img/nataliacamposLogo.png" alt="foto" style="width: 100%; max-width:180px; height: auto;">
         <p class="" >"Sua saúde bem acompanhada"</p>
       </div>
