--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
   <!-- main image & intro text -->
-  <div style="background-image: url(./_img/background.png); background-size: cover;">
+  <div style="background-image: url(./_img/background.png); background-size: cover; margin-bottom: -5%;">
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
         <a class="nav-link" id="prato" href="#" style="padding-left: 15%; color: #590219"><strong>Natália Campos</strong></a>
@@ -55,13 +55,13 @@
     <div class="vertical-line"></div> 
     <div class="vertical-line-right"></div>
     <div class="row">
-      <section id="inicio" class="col-md-6 order-2 order-md-1" >
+      <section id="inicio" class="col-md-6 order-3 order-md-1" >
         <div >
           <div class="row align-items-start" id="primeiraSecao">
-            <div class="mt-5 col-md-12 pb-5 alinhamentoBasico">
+            <div class="col-md-12 alinhamentoBasico">
               <h1 class="mt-5 PrimeiraFonte fonteGigante" id="tituloConstrua1" style="color: #590219"> Construa <span style="color:#DABE85;">a sua</span><br>
                 melhor versão<br></h1>
-              <h1 class="PrimeiraFonte fonteGigante" id="tituloConstrua" style="color: #590219">Construa <span style="color:#DABE85;"> a sua</span> melhor versão<br></h1>
+              <h1 class="PrimeiraFonte fonteGigante" id="tituloConstrua" style="color: #590219;">Construa <span style="color:#DABE85;"> a sua</span> melhor versão<br></h1>
               <p class="pb-5 fonteTexto" style="color: #590219"><br>Acompanhamento nutricional personalizado para alcançar seus objetivos. Com suporte personalizado, realizar seus sonhos é mais fácil do que nunca.</p>
               <div class="pb-5 dynamic-padding">
                 <a id="whatsapp-link" href="https://wa.me/<%= whatsappNumber %>">
@@ -80,39 +80,41 @@
         </div>
       </section>
       <hr class="responsive-line">
-      <div class="container text-center linhaVantagens">
+      <section class="container order-2 order-md-2 text-center linhaVantagens">
         <div class="row">
           <!-- Botão 1 -->
-          <div class="col-md col-6 mb-3">
+          <div class="col-md col-6 pb-2">
             <button class="button-6" role="button" style="color: #6B5C3E">
               <img src="./_img/Vector.png" alt="" id="figurinhasBotao">
               Reeducação <br> alimentar
             </button>
           </div>
           <!-- Botão 2 -->
-          <div class="col-md col-6 mb-3">
+          <div class="col-md col-6 pb-2">
             <button class="button-6" role="button" style="color: #6B5C3E">
               <img src="./_img/Vector (1).png" alt="" id="figurinhasBotao">
               Hipertrofia
             </button>
           </div>
           <!-- Botão 3 -->
-          <div class="col-md col-6 mb-3">
+          <div class="col-md col-6">
             <button class="button-6" role="button" style="color: #6B5C3E">
               <img src="./_img/Balnça.png" alt="" id="figurinhasBotao">
               Emagrecimento
             </button>
           </div>
           <!-- Botão 4 -->
-          <div class="col-md col-6 pb-5">
+          <div class="col-md col-6">
             <button class="button-6" role="button" style="color: #6B5C3E">
               <img src="./_img/Vector (2).png" alt="" id="figurinhasBotao">
               Nutrição <br> estratégica
             </button>
           </div>
         </div>
-      </div>      
+      </section>   
     </div>
+         
+    
   </div>
   <section style="background-color:#FFEEEE;" id="feedbacks">    
     <div class="" >
