--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rondon</title>
+  <title>Naty Campos Nutri</title>
   <link href="/_css/main.min.css" rel="stylesheet">
   <link href="/_css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -47,7 +47,7 @@
           <span class="navbar-text pe-2">
             <a class="nav-link" id="whatsapp-link" href="https://wa.me/<%= whatsappNumber %>"><img src="./_img/whatsapp.png" alt="" style="height: 32px"></a></span>
           <span class="navbar-text" style="padding-right: 10%;">  
-            <a class="nav-link" href="./_img/termos de uso.txt"><img src="./_img/insta.png" alt="" style="height: 32px"></a>
+            <a class="nav-link" href="https://www.instagram.com/natycamposnutri?igsh=OXlkY2xmMDNnMGsx"><img src="./_img/insta.png" alt="" style="height: 32px"></a>
           </span>
         </div>
       </div>
@@ -231,22 +231,22 @@
                 <button class="button-8 w-100" role="button" style="color: white">+ Tempo</button>
               </div>
               <div class="col-md-4 mb-3 me-5">
-                <button class="button-8 w-100" role="button" style="color: white">+ Saúde</button>
+                <button class="button-8 w-100" role="button" style="color: white">+ Bem-estar </button>
               </div>
             </div>
             <div class="row move-in no-wrap">
               <!-- Segunda linha com 4 botões -->
               <div class="col-md-4 mb-3 me-5">
-                <button class="button-8 w-100 " role="button" style="color: white">+ Satisfação</button>
-              </div>
-              <div class="col-md-4 mb-3 me-5">
-                <button class="button-8 w-100" role="button" style="color: white">+ Disposição</button>
+                <button class="button-8 w-100 " role="button" style="color: white">+ Saúde</button>
               </div>
               <div class="col-md-4 mb-3 me-5">
                 <button class="button-8 w-100" role="button" style="color: white">+ Satisfação</button>
               </div>
               <div class="col-md-4 mb-3 me-5">
-                <button class="button-8 w-100 " role="button" style="color: white">+ Satisfação</button>
+                <button class="button-8 w-100" role="button" style="color: white">+ Disposição</button>
+              </div>
+              <div class="col-md-4 mb-3 me-5">
+                <button class="button-8 w-100 " role="button" style="color: white">+ Equilíbrio</button>
               </div>
             </div>
           </div>
@@ -319,6 +319,8 @@
             <div class="col-md-12 pt-5">
               <h1 class="PrimeiraFonte fonteGigante" style="line-height: 80px; color: #590219"> O local</h1>
               <p class="fonteQuem">Nosso espaço combina conforto, praticidade e modernidade. Com equipamentos avançados e uma estrutura acolhedora, garantimos uma experiência positiva e inspiradora.</p>
+              <a href="#mapa" style="text-decoration: none"><p class="fonteQuem"><img src="./_img/localizacao.png" alt="foto" style="max-width:50px;">Confira nossa localização</p>
+              </a>
             </div>
           </div>
       </section>
@@ -346,21 +348,21 @@
         <div class="card-body">
           <img src="./_img/panela.png" alt="foto" id="panela">
           <h5 class="card-text text-white cardTitulo">Plano nutricional</h5>
-          <p class="card-text text-white cardTexto">Ferramentas digitais para facilitar sua jornada e impulsionar seus resultados.</p>
+          <p class="card-text text-white cardTexto">Dieta estratégica e personalizada para otimizar seu processo e alcançar seus objetivos.</p>
         </div>
       </div>
       <div class="col-6 card vantagensCard" id="larguraCards2">
         <div class="card-body">
           <img src="./_img/suporte.png" alt="foto" id="suporte">
           <h5 class="card-text text-white cardTitulo">Suporte Contínuo</h5>
-          <p class="card-text text-white cardTexto">Ferramentas digitais para facilitar sua jornada e impulsionar seus resultados.</p>
+          <p class="card-text text-white cardTexto">Acompanhamento próximo e especializado com ajustes precisos e motivação constante.</p>
         </div>
       </div>
       <div class="col-6 card vantagensCard" id="larguraCards">
         <div class="card-body">
           <img src="./_img/anilha.png" alt="foto" id="suporte">
           <h5 class="card-text text-white cardTitulo" >Resultados reais!</h5>
-          <p class="card-text text-white cardTexto">Ferramentas digitais para facilitar sua jornada e impulsionar seus resultados.</p>
+          <p class="card-text text-white cardTexto">Evolução mensurável e sustentável, baseada em dados e adaptação inteligente à sua rotina.</p>
         </div>
       </div>
     </div>
@@ -421,14 +423,45 @@
         </div>
       </div>
       
-      
-      <div class="mt-5 text-center pt-5" style="font-size: 24px; color: #590219; font-weight: 200; ">
+      <div class="mt-5 text-center pt-5" style="font-size: 24px; color: #590219; font-weight: 200; " id="mapa">
         <p class="pt-2">Confira nossas outras opções de planos através do WhatsApp</p>
-        <img src="./_img/nataliacamposLogo.png" alt="foto" style="width: 100%; max-width:180px; height: auto;">
-        <p class="" >"Sua saúde bem acompanhada"</p>
+      </div>
+
+      <div id="carouselExampleIndicators" class="carousel carousel-dark slide" >
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class=" text-center pt-5" style="font-size: 24px; color: #590219; font-weight: 200; ">
+              <img src="./_img/nataliacamposLogo.png" alt="foto" style="width: 100%; max-width:180px; height: auto;">
+              <p class="" >"Sua saúde bem acompanhada"</p>
+            </div>
+          </div>
+          <div class="carousel-item" >
+            <div class="d-flex justify-content-center align-items-center" style="height: 90%;">
+              <gmp-map
+                center="-3.7419567456677076, -38.499893822091394"
+                zoom="18"
+                map-id="DEMO_MAP_ID"
+                style="max-height: 400px; max-width: 400px; width: 100%; height: 100%;"
+              ></gmp-map>
+            </div>
+            <p class="d-flex justify-content-center align-items-center" >Edf Humberto Santana Business sala 1301 - R. Vicente Linhares, 521 - Aldeota, Fortaleza - CE, 60135-270</p>
+          </div>
+          
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
-
     <section style="background-color:rgb(150, 147, 147)">    
       <div class="" >
         <div class="row align-items-start">
@@ -447,6 +480,11 @@
       new bootstrap.Tooltip(t)
     })
   </script>
+
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=<%= apiKey %>&loading=async&libraries=maps&v=beta" defer>
+  </script>
+
 
 </body>
 </html>
