--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,8 +11,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <script src="https://cdn.lordicon.com/lordicon.js"></script>
-
 </head>
 <body>
   <!-- main image & intro text -->
@@ -131,7 +129,7 @@
           <div class="carousel-item active" data-bs-interval="10000">
             <div class="row alinhamentoCarrossel">
               <div class="col-md ">
-                <img src="./_img/feedback1.png" class="imgCarrossel d-block mw-100" style="padding-left: 15%;" alt="...">
+                <img src="./_img/feedback1.png" class="imgCarrossel d-block mw-100" style="margin-left: 5%; border-radius: 0.5cm" alt="...">
               </div>
               <div class="col-md">
                 <div class="">
@@ -145,7 +143,7 @@
           <div class="carousel-item" data-bs-interval="2000">
             <div class="row alinhamentoCarrossel">
               <div class="col-md">
-                <img src="./_img/feedback2.png" class="imgCarrossel d-block mw-100" style="padding-left: 15%;" alt="...">
+                <img src="./_img/feedback2.png" class="imgCarrossel d-block mw-100" style="margin-left: 5%; border-radius: 0.5cm" alt="...">
               </div>
               <div class="col-md" >
                 <div class="">
@@ -159,7 +157,7 @@
           <div class="carousel-item">
             <div class="row alinhamentoCarrossel">
               <div class="col-md">
-                <img src="./_img/feedback3.png" class="imgCarrossel d-block mw-100" style="padding-left: 15%;" alt="...">
+                <img src="./_img/feedback3.png" class="imgCarrossel d-block mw-100" style="margin-left: 5%; border-radius: 0.5cm" alt="...">
               </div>
               <div class="col-md" >
                 <div class="">
@@ -173,7 +171,7 @@
           <div class="carousel-item">
             <div class="row alinhamentoCarrossel">
               <div class="col-md">
-                <img src="./_img/feedback4.png" class="imgCarrossel d-block mw-100" style="padding-left: 15%;" alt="...">
+                <img src="./_img/feedback4.png" class="imgCarrossel d-block mw-100" style="margin-left: 5%; border-radius: 0.5cm" alt="...">
               </div>
               <div class="col-md" >
                 <div class="">
@@ -187,7 +185,7 @@
           <div class="carousel-item">
             <div class="row alinhamentoCarrossel">
               <div class="col-md">
-                <img src="./_img/feedback5.png" class="imgCarrossel d-block mw-100" style="padding-left: 15%;" alt="...">
+                <img src="./_img/feedback5.png" class="imgCarrossel d-block mw-100" style="margin-left: 5%; border-radius: 0.5cm" alt="...">
               </div>
               <div class="col-md" >
                 <div class="">
@@ -428,10 +426,10 @@
       </div>
 
       <div id="carouselExampleIndicators" class="carousel carousel-dark slide" >
-        <div class="carousel-indicators">
+        <!-- <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        </div>
+        </div> -->
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class=" text-center pt-5" style="font-size: 24px; color: #590219; font-weight: 200; ">
@@ -448,7 +446,7 @@
                 style="max-height: 400px; max-width: 400px; width: 100%; height: 100%;"
               ></gmp-map>
             </div>
-            <p class="d-flex justify-content-center align-items-center" >Edf Humberto Santana Business sala 1301 - R. Vicente Linhares, 521 - Aldeota, Fortaleza - CE, 60135-270</p>
+            <p class="d-flex justify-content-center align-items-center" >Edf Humberto Santana Business, sala 1301 - R. Vicente Linhares, nr 521 - Aldeota, Fortaleza - CE, 60135-270</p>
           </div>
           
         </div>
