--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -51,9 +51,9 @@
       </div>
     </nav>  
     <div class="vertical-line"></div> 
-    <div class="vertical-line-right"></div>
+    <div class="vertical-line-right" id="prato"></div>
     <div class="row">
-      <section id="inicio" class="col-md-6 order-3 order-md-1" >
+      <section id="inicio" class="col-md-6 order-3 order-lg-1" >
         <div >
           <div class="row align-items-start" id="primeiraSecao">
             <div class="col-md-12 alinhamentoBasico">
@@ -70,15 +70,15 @@
           </div>
         </div>
       </section>
-      <section class="col-md-6 text-center order-1 order-md-2" style="display: flex; align-items: center; justify-content: center; padding-right: 10%;">
-        <div class="image-container pt-3">
-          <button class="blur-button" style="bottom: 20%; left: -20%;"></button>
+      <section class="col-md-6 order-1 order-lg-2 d-flex justify-content-center align-items-center" >
+        <div class="pt-3">
+          <button class="blur-button" style="bottom: 20%; left: 55%;"></button>
           <img src="./_img/nataliacampos (1).png" id="fotoNatalia" alt="foto">
-          <button class="blur-button" style="top: 35%; right: -5%;"></button>
+          <button class="blur-button" style="top: 35%; right: 5%;"></button>
         </div>
       </section>
-      <hr class="responsive-line">
-      <section class="container order-2 order-md-2 text-center linhaVantagens">
+      <hr class="responsive-line order-2">
+      <section class="container order-2 order-lg-2 text-center linhaVantagens">
         <div class="row">
           <!-- Botão 1 -->
           <div class="col-md col-6 pb-2">
