--- a/app/public/_css/style.css
+++ b/app/public/_css/style.css
@@ -99,26 +99,6 @@
   color: #ffffff;
 }
 
-/* section {
-  overflow-x: hidden;
-} */
-
-#linha {
-  width: 100%;
-  border-bottom: 2px solid   black;
-}
-
-#linha2 {
-  width: 55%;
-  border-bottom: 2px solid   black;
-}
-
-@media (max-width: 1024px) {
-  #linha2 {
-    width: 100%;
-  }
-}
-
 /* CSS */
 .button-57 {
   display: inline-block;
@@ -166,39 +146,6 @@
     color: #fff;
 }
 
-/* Se a tela for maior que 1024px (por exemplo, um tablet ou desktop) */
-@media (min-width: 1024px) {
-  .dynamic-padding {
-    padding-left: 20vh;
-  }
-}
-
-/* Se a tela for menor que 1024px (por exemplo, um celular) */
-@media (max-width: 1023px) {
-  .dynamic-padding {
-    padding-left: 0;
-  }
-}
-
-/* @font-face {
-  font-family: PrimeiraFonte;
-  src: url("./_font/Bastine.ttf")
-} */
-
-/* .merriweather-regular {
-  font-family: "Merriweather", serif;
-  font-weight: 400;
-  font-style: normal;
-} */
-/* 
-@font-face {
-  font-family: PrimeiraFonte;
-  src: url('bastine-webfont.woff2') format('woff2'),
-       url('bastine-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-} */
-
 .PrimeiraFonte {
   font-family: "Merriweather", serif;
   font-weight: 400;
@@ -210,15 +157,6 @@ section {
   padding-right: 20vh;
 }
 
-@media (max-width: 768px) {
-  section {
-    padding-left: 5vh;
-    padding-right: 5vh;
-  }
-  #inicio {
-    padding-left: 0vh; /* Ajuste para telas de celular */
-  }
-}
 
 html, body {
   margin: 0;
@@ -237,14 +175,6 @@ html, body {
    /* Ajusta a imagem para cobrir o espaço sem distorção */
 }
 
-/* Ajuste para telas menores */
-@media (max-width: 768px) {
-  #logo {
-    width: 250px; /* Largura reduzida para telas menores */
-  }
-  
-}
-
 .vertical-line {
   position: absolute; /* Mantém a linha fixa no layout */
   top: 0; /* Começa no topo */
@@ -253,12 +183,6 @@ html, body {
   height: 60vh; /* Altura igual a metade da página */
   background-color: #590219; /* Cor da linha */
   z-index: 1; /* Coloca a linha abaixo de outros elementos se necessário */
-}
-@media (max-width: 576px) {
-  .vertical-line {
-    height: 30vh; /* Altura reduzida em telas menores */
-    left: 5%; /* Ajuste para alinhar com o layout */
-  }
 }
 
 .vertical-line-right {
@@ -269,15 +193,6 @@ html, body {
   height: 50vh; /* Altura igual a metade da página */
   background-color: #590219;
   z-index: 1;
-}
-/* Ajuste para telas menores */
-@media (max-width: 576px) {
-  .vertical-line-right {
-    height: 10vh; /* Altura reduzida em telas menores */
-    bottom: 49%; /* Começa na parte inferior da página */
-  }
-  
-
 }
 
 .image-container {
@@ -304,19 +219,9 @@ html, body {
   transform: scale(1.1); /* Ampliar ligeiramente no hover */
   background-color: rgba(255, 255, 255, 0.2); /* Realça o fundo */
 }
-@media (max-width: 840px) {
-  .blur-button {
-    display: none;
-  }
-}
 
 .alinhamentoBasico {
   padding-left: 30vh;
-}
-@media (max-width: 840px) {
-  .alinhamentoBasico {
-    padding-left: 8vh;
-  }
 }
 
 .alinhamentoRoteiro {
@@ -325,39 +230,10 @@ html, body {
 #feedbacks {
   padding-top: 2%;
 }
-@media (max-width: 840px) {
-  .alinhamentoRoteiro {
-    padding-top: 0vh;
-  }
-  #primeiraSecao {
-    padding-top: 3vh;
-  }
-  #feedbacks {
-    padding-top: 0%;
-  }
-}
 
 .alinhamentoCarrossel {
   padding-right: 0%;
   padding-left: 10%;
-}
-@media (max-width: 840px) {
-  .alinhamentoCarrossel {
-    padding-right: 5%;
-    padding-left: 5%;
-  }
-}
-
-@media (max-width: 840px) {
-  #prato {
-    display: none;
-  }
-  #anilhas {
-    display: none;
-  }
-  .imgCarrossel {
-    max-height: 300px;
-  }
 }
 
 .imgCarrossel {
@@ -395,37 +271,7 @@ html, body {
 }
 
 /* Para celulares (largura máxima de 768px) */
-@media (max-width: 768px) {
-  #fotoNatalia {
-    width: 250px;
-  }
-}
-@media (max-width: 840px) {
-  .fonteGigante {
-    font-size: 40px;
-    line-height: 40px;
-  }
-  .fonteTexto{
-    font-size: 20px;
-    line-height: 20px;
-  }
-  #tituloConstrua {
-    display: block;
-    margin-top: -10%;
-  }
-  #tituloConstrua1 {
-    display: none
-  }
-  #botaoCelular {
-    display: block
-  }
-  #prato1 {
-    max-width:300px;
-  }
-  #plano {
-    padding-left: 5vh;
-  }
-}
+
 
 .paddingEnd {
   padding-right: 10vh;
@@ -440,19 +286,6 @@ html, body {
   line-height: 38px;
   color: #590219
 }
-@media (max-width: 840px) {
-  .fonteQuem {
-    font-size: 22px; 
-    line-height: 22px;
-  }
-  .paddingEnd {
-    padding-right: 0vh;
-  }
-  .paddingNumeros {
-    padding-left: 0%;
-  }
-  
-}
 
 #figurinhasBotao {
   height: 35px; 
@@ -464,32 +297,6 @@ html, body {
   max-height: 500px;
 }
 
-
-@media (max-width: 840px) {
-  .alinhamentoQuem {
-    padding-left: 5vh;
-    padding-right: 5vh;
-    margin-top: -12rem;
-    padding-top: 10rem;
-  }
-  #alinhamentoQuem1 {
-    padding-left: 5vh;
-    padding-right: 5vh;
-    margin-top: 10rem
-  }
-  #imagemQuem {
-    margin-left: 0vh;
-    max-height: 350px;
-  }
-  #imagemQuem1 {
-    margin-left: 10vh;
-    max-height: 350px;
-  }
-  #figurinhasBotao {
-    height: 20px; 
-    padding-right: 10px;
-  }
-}
 .vantagensCard {
   background-image: linear-gradient(to bottom left, #E8D6B2, #DABE85); 
   height: 100%; 
@@ -526,45 +333,6 @@ html, body {
 }
 #celular {
   width: 100%; max-width: 60px; height: auto; padding: 10px;
-}
-
-@media (max-width: 840px) {
-  #larguraCards {
-    margin-left: 2vh;
-    margin-top: 5vh;
-  }
-  #larguraCards2 {
-    margin-left: 2vh;
-    margin-top: 5vh;
-  }
-  .cardTitulo {
-    font-size: 16px;
-    font-weight: bold;
-  }
-  .cardTexto {
-    font-size: 12px; 
-    font-weight:300
-  }  
-  .vantagensCard {
-    background-image: linear-gradient(to bottom left, #E8D6B2, #DABE85); 
-    width: 45%;
-    border-radius: 10%;
-    border: none; 
-    box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.3);
-    max-width: 18rem;
-    margin: 0px;
-    padding: 0px;
-  }
-  #suporte {
-    width: 100%; max-width: 70px; height: auto; padding: 10px;
-  }
-  #panela {
-    width: 100%; max-width: 80px; height: auto; padding: 10px;
-  }
-  #celular {
-    width: 100%; max-width: 50px; height: auto; padding: 10px;
-  }
-  
 }
 
 .button-6 {
@@ -613,47 +381,15 @@ html, body {
   transform: translateY(0);
 }
 
-@media (max-width: 576px) {
-  .button-6 {
-    font-size: 14px; /* Tamanho menor para telas pequenas */
-    padding: 0.75rem 1rem; /* Ajustar padding para manter proporção */
-    min-height: 2.5rem; /* Reduz altura mínima */
-    width: 150px;
-    height: 50px;
-  }
-}
-
 .linhaVantagens {
   position: relative; /* Mantém no fluxo do documento */
   transform: translateY(-30%); 
-}
-
-/* Ajustar para telas menores */
-@media (max-width: 850px) {
-  .linhaVantagens {
-    transform: translateY();
-  }
 }
 
 /* Estilo padrão: linha não visível */
 .responsive-line {
   display: none;
 }
-
-/* Aparece apenas em telas menores */
-@media (max-width: 576px) {
-  .responsive-line {
-    display: block;
-    border: 0;
-    height: 45px; /* Espessura da linha */
-    background-image: linear-gradient(to right, #590219 , #BF0436); /* Cor da linha */
-    margin: 0 1rem; /* Espaçamento superior e inferior */
-    position: absolute;
-    bottom: 17.5rem;
-    opacity: 1;
-  }
-}
-
 
 .button-7 {
   align-items: center;
@@ -760,4 +496,203 @@ html, body {
 .no-wrap {
   display: flex;
   flex-wrap: nowrap; /* Impede quebra de linha */
+}
+
+/* Se a tela for maior que 1024px (por exemplo, um tablet ou desktop) */
+@media (min-width: 1024px) {
+  .dynamic-padding {
+    padding-left: 20vh;
+  }
+}
+
+/* Se a tela for menor que 1024px (por exemplo, um celular) */
+@media (max-width: 1023px) {
+  .dynamic-padding {
+    padding-left: 0;
+  }
+}
+@media (max-width: 1024px) and (min-width:768px) {
+  #fotoNatalia {
+    width: 350px;
+    margin-left: 50%;
+  }
+  #tituloConstrua {
+    display: block;
+    margin-top: -10%;
+  }
+  #tituloConstrua1 {
+    display: none
+  }
+}
+/* Ajuste para telas menores */
+@media (max-width: 768px) {
+  #logo {
+    width: 250px; /* Largura reduzida para telas menores */
+  }
+  #fotoNatalia {
+      width: 250px;
+    }
+  section {
+    padding-left: 5vh;
+    padding-right: 5vh;
+  }
+  #inicio {
+    padding-left: 0vh; /* Ajuste para telas de celular */
+  }
+
+}
+
+@media (max-width: 576px) {
+  .vertical-line {
+    height: 30vh; /* Altura reduzida em telas menores */
+    left: 5%; /* Ajuste para alinhar com o layout */
+  }
+  .vertical-line-right {
+    height: 10vh; /* Altura reduzida em telas menores */
+    bottom: 49%; /* Começa na parte inferior da página */
+  }
+  .responsive-line {
+    display: block;
+    border: 0;
+    height: 45px; /* Espessura da linha */
+    background-image: linear-gradient(to right, #590219 , #BF0436); /* Cor da linha */
+    margin: 0 1rem; /* Espaçamento superior e inferior */
+    opacity: 1;
+  }
+  .button-6 {
+    font-size: 14px; /* Tamanho menor para telas pequenas */
+    padding: 0.75rem 1rem; /* Ajustar padding para manter proporção */
+    min-height: 2.5rem; /* Reduz altura mínima */
+    width: 150px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 840px) {
+  .blur-button {
+    display: none;
+  }
+  .alinhamentoBasico {
+    padding-left: 8vh;
+  }
+  .alinhamentoRoteiro {
+    padding-top: 0vh;
+  }
+  #primeiraSecao {
+    padding-top: 3vh;
+  }
+  #feedbacks {
+    padding-top: 0%;
+  }
+  .alinhamentoCarrossel {
+    padding-right: 5%;
+    padding-left: 5%;
+  }
+  #prato {
+    display: none;
+  }
+  #anilhas {
+    display: none;
+  }
+  .imgCarrossel {
+    max-height: 300px;
+  }
+  .fonteGigante {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .fonteTexto{
+    font-size: 20px;
+    line-height: 20px;
+  }
+  #tituloConstrua {
+    display: block;
+    margin-top: -10%;
+  }
+  #tituloConstrua1 {
+    display: none
+  }
+  #botaoCelular {
+    display: block
+  }
+  #prato1 {
+    max-width:300px;
+  }
+  #plano {
+    padding-left: 5vh;
+  }
+  .fonteQuem {
+    font-size: 22px; 
+    line-height: 22px;
+  }
+  .paddingEnd {
+    padding-right: 0vh;
+  }
+  .paddingNumeros {
+    padding-left: 0%;
+  }
+  .alinhamentoQuem {
+    padding-left: 5vh;
+    padding-right: 5vh;
+    margin-top: -12rem;
+    padding-top: 10rem;
+  }
+  #alinhamentoQuem1 {
+    padding-left: 5vh;
+    padding-right: 5vh;
+    margin-top: 10rem
+  }
+  #imagemQuem {
+    margin-left: 0vh;
+    max-height: 350px;
+  }
+  #imagemQuem1 {
+    margin-left: 10vh;
+    max-height: 350px;
+  }
+  #figurinhasBotao {
+    height: 20px; 
+    padding-right: 10px;
+  }
+  #larguraCards {
+    margin-left: 2vh;
+    margin-top: 5vh;
+  }
+  #larguraCards2 {
+    margin-left: 2vh;
+    margin-top: 5vh;
+  }
+  .cardTitulo {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .cardTexto {
+    font-size: 12px; 
+    font-weight:300
+  }  
+  .vantagensCard {
+    background-image: linear-gradient(to bottom left, #E8D6B2, #DABE85); 
+    width: 45%;
+    border-radius: 10%;
+    border: none; 
+    box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.3);
+    max-width: 18rem;
+    margin: 0px;
+    padding: 0px;
+  }
+  #suporte {
+    width: 100%; max-width: 70px; height: auto; padding: 10px;
+  }
+  #panela {
+    width: 100%; max-width: 80px; height: auto; padding: 10px;
+  }
+  #celular {
+    width: 100%; max-width: 50px; height: auto; padding: 10px;
+  }
+}
+/* Ajustar para telas menores */
+@media (max-width: 850px) {
+  .linhaVantagens {
+    transform: translateY(-70%);
+  }
 }
